--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     </div>
     <div class="insider">
       <textarea
+        id="input-text"
         placeholder="Enter Text Here For Converting In Dothraki"
       ></textarea>
-      <div class="btn">
+      <div class="btn" id="btn-translate">
         <button>Translate</button>
       </div>
       <p>Translated Text Will Come Here 👇👇</p>
-      <textarea placeholder="Your Converted Text Will Come Here"></textarea>
+      <textarea id="output-text"></textarea>
     </div>
     <div class="footer">
       <h1>About Dothraki Talk</h1>
@@ -29,5 +30,6 @@
         sentences and get the desired results.
       </p>
     </div>
+    <script src="./index.js" type="text/javascript"></script>
   </body>
 </html>
